# omf-io

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html  todo.html  user_guide.html
.doctrees/: environment.pickle  index.doctree  sg_execution_times.doctree  todo.doctree  user_guide.doctree
.doctrees/api/: modules.doctree
.doctrees/auto_examples/: 100_pointset_basics.doctree  index.doctree  sg_execution_times.doctree
.doctrees/glossary/: glossary.doctree
.doctrees/license/: license.doctree
.doctrees/usage/: installation.doctree  quickstart.doctree
.doctrees/user_guide/: 00_about.doctree  01_points.doctree  02_lines.doctree  03_surfaces.doctree  04_block_models.doctree
_downloads/26ee983a299ab8a6ec4ba1769ee7956b/: 100_pointset_basics.ipynb
_modules/: index.html
_sources/: index.rst.txt  sg_execution_times.rst.txt
_sources/api/: modules.rst.txt
_sources/auto_examples/: 100_pointset_basics.rst.txt  index.rst.txt  sg_execution_times.rst.txt
api/: modules.html
api/_autosummary/: omf_io.blockmodel.block_model.BlockModelIO.html  omf_io.blockmodel.exporters.html  (+78 more)
auto_examples/: 100_pointset_basics.html  index.html  sg_execution_times.html
examples/: 100_pointset_basics.py  README.rst
glossary/: glossary.html
license/: license.html
omf_io/: __init__.py
test/: conftest.py  test_103_pointset_edge_cases.py
usage/: installation.html  quickstart.html
user_guide/: 00_about.html  01_points.html  02_lines.html  03_surfaces.html  04_block_models.html
(+240 files in other folders)
