[tool.poetry]
name = "omf-io"
version = "0.1.0"
description = ""
authors = ["Greg <11791585+elphick@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "omf_io" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.3"
omf = { version = ">=2.0.0a0", allow-prereleases = true }  # the original native python omf package.
#omf2 = "^0.1.0"  # the rust backed python omf package.
pandera = { extras = ['io'], version = "^0.23.1", optional = true }
ydata-profiling = { version = "^4.9.0", optional = true }
rioxarray = { version = "^0.18.2", optional = true }

[tool.poetry.extras]
raster = ["rioxarray"]
validate = ["pandera"]
profile = ["ydata-profiling"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
sphinx = "^7.3.7"
sphinx-gallery = "^0.16.0"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^3.0.1"
sphinx-autodoc-typehints = "^2.1.1"
matplotlib = "^3.7.2"
# packages below here are for plotly and plotly thumbnails
plotly = "^5.15.0"
kaleido = "0.1.0.post1"
graphviz = "^0.20.3"
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
